@@ -1,4 +1,5 @@
 5.0
+ * Add guardrail for vector dimensions (CASSANDRA-18730)
  * Upgraded Netty to 4.1.96, added BouncyCastle dependency (CASSANDRA-17992)
  * Fix for (unsupported) big endian unaligned architecture, eg s390x (CASSANDRA-17723)
  * CIDR filtering authorizer (CASSANDRA-18592)
